--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
     },
     "data_config": {
         "training_files": "train_files.txt",
+        "testing_files": "test_files.txt",
         "segment_length": 16000,
         "sampling_rate": 22050,
         "filter_length": 1024,
